# Flying_everywhere

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_30_2102__57353d481481_flight_and_aircraft.py  2024_12_31_1913__96955fd79c7a_.py  2024_12_31_1943__e8aeafb1db65_.py  2024_12_31_2018__4e2a1eeacf9d_.py  2024_12_31_2135__3f9b8e2fac2d_.py  2025_01_01_1334__82473cd5eae5_.py  2025_01_01_1344__c780ca96f2a8_.py  2025_01_01_1346__d5af15698e8c_.py  2025_01_01_1922__1864adb86ace_.py  2025_01_01_1931__2f7c64a69636_.py  2025_01_01_1934__2d61a2d1174b_.py
app/: __init__.py  main.py
app/api_v1/: error_messages.py
app/api_v1/aircraft_api/: __init__.py  aircraft_routers.py  error_messages.py  schemas.py
app/api_v1/aircraft_api/routers_code/: __init__.py  create_aircraft_code.py  delete_aircraft_code.py  get_aircraft_code.py  get_all_aircrafts_code.py  update_delete_code.py
app/api_v1/flight_api/: __init__.py  flight_routers.py  schemas.py
app/api_v1/flight_api/routers/: __init__.py  create_flight.py
app/api_v1/flight_api/routers_code/: __init__.py  create_flight_code.py  delete_flight_code.py  get_all_flights.py  get_flight_code.py
app/api_v1/flight_api/schemas/: create_flight_s.py
app/core/: __init__.py  config.py
app/core/models/: __init__.py  aircraft.py  flight.py
app/logging_cfg/: __init__.py
migrations/: env.py
migrations/versions/: ab5756b56322_initial.py
