[tool.poetry]
name = "flying-everywhere"
version = "0.1.0"
description = "Бэкэнд веб-приложения для перелётов"
authors = ["Макс <rumyantsev1m0s1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.0"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
orjson = "^3.10.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
